--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Class Project</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
-        <img src="image/video games.jpg" alt="Video Games">
         <h1>Dragonberries Gaming Cafe</h1>
+        <img src="image/video games3.jpg" alt="Video Games">
         <nav>
             <ul>
                 <li>Dragonberries locations</li>
@@ -18,16 +20,27 @@
                 <li>About</li>
             </ul>
         </nav>
+        <img src="image/video games3.jpg" alt="Video Games">
     </header>
     
-    <main>
-        <article>
-            <h3>Types of Gaming systems</h3>
-            <img src="image/videogames2.jpg" alt="Video Games2">
-            <li>Gaming Computers</li>
-            <li>Xbox One</li>
-            <li>Playstation 4</li>
-            <li>Nintendo Switch</li>
-        </article>
+        <main>
+            <article>
+                <h2>Types of Gaming systems</h2>
+                <img src="image/videogames2.jpg" alt="Video Games2">
+                <li>Gaming Computers</li>
+                <li>Xbox One</li>
+                <li>Playstation 4</li>
+                <li>Nintendo Switch</li>
+            </article>
+            
+            <article>
+                <h2>HOT/POPULAR Games</h2>
+                <img src="image/video games4.jpg" alt="Video Games4">
+                <li>Valorant</li>
+                <li>League of Legends</li>
+                <li>Call of Duty ModernWarfare</li>
+                <li>Ghost of Tsushima</li>                    
+            </article>
+        </main>    
 </body>
 </html>
