--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
                 <li>Call of Duty ModernWarfare</li>
                 <li>Ghost of Tsushima</li>                    
             </article>
+
+            <article>
+                
+            </article>
         </main>    
 </body>
 </html>
